Fixed NavBar styling to align buttons to the right, except home button

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -6,17 +6,9 @@ body {
 }
 
 body {
-  background: #fffafa;
+  background: #fafafa;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-header {
-  border-style: solid;
-  border-color: black;
-  border-width: 1px;
-  height: 100%;
-  padding: 5px;
 }
 
 a {
