--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -1,4 +1,21 @@
+.header {
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  height: 100%;
+  padding: 5px;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: flex-end;
+}
+
 .nav-item {
-  display: inline-block;
   margin: 5px;
 }
+
+.nav-home-button {
+  position: absolute;
+  left: 5px;
+}
+
+
