--- a/src/styles/partypanel.less
+++ b/src/styles/partypanel.less
@@ -3,6 +3,16 @@
   border-color: black;
   border-width: 1px;
   height: 100%;
-  width: ~"calc(50% - 2px)";
+  width: 50%;
+  box-sizing: border-box;
   display: inline-block;
+  padding: 5px;
+}
+
+.d-panel {
+  background-color: #007ee5;
+}
+
+.r-panel {
+  background-color: #ef3525;
 }
